fix: no scrollbar when open the right sidebar

--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -1143,3 +1143,7 @@ html[data-theme='dark'] .keyboard-shortcut > code {
 .ui__modal-panel {
   border-radius: 8px;
 }
+
+.overflow-y-scroll {
+    overflow-y: scroll;
+}
